# rsomics-bed-total-bp

./: Cargo.toml  README.md
benches/: bed_total_bp.rs  bench.rs
src/: cli.rs  lib.rs
tests/: compat.rs
tests/golden/: input.bed
