[package]
name = "rsomics-bed-total-bp"
version = "0.1.0"
edition = "2024"
rust-version = "1.91"
license = "MIT OR Apache-2.0"
description = "Count total base-pairs covered by BED intervals (sum of end - start)"
repository = "https://github.com/omics-rust/rsomics-bed-total-bp"
readme = "README.md"
authors = ["Zane Leong <efd@live.com>"]
categories = ["science", "command-line-utilities"]
keywords = ["bed", "statistics", "bioinformatics", "genomics"]

[[bin]]
name = "rsomics-bed-total-bp"
path = "src/main.rs"

[lib]
name = "rsomics_bed_total_bp"
path = "src/lib.rs"
doctest = false

[dependencies]
rsomics-common = { version = "0.6" }
rsomics-help = { version = "0.3" }
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
criterion = { version = "0.7", default-features = false, features = ["cargo_bench_support"] }

[[bench]]
name = "bed_total_bp"
harness = false
